@@ -1,6 +1,6 @@
 Package: RcmdrMisc
 Version: 1.0-6
-Date: 2016-08-30
+Date: 2016-09-19
 Title: R Commander Miscellaneous Functions
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Robert", "Muenchen", role = "ctb"),
