@@ -5,6 +5,8 @@ Changes to Version 1.0-6
   o Added readStata() for improved input of Stata .dta files.
   
   o Improvements to plotMeans() legends.
+  
+  o Barplot() can now compute conditional percentages (suggestion of Beatriz Lacruz).
 
 Changes to Version 1.0-5
 
